--- a/app/src/main/res/layout/layout_income.xml
+++ b/app/src/main/res/layout/layout_income.xml
@@ -5,31 +5,13 @@
 
     android:orientation= "vertical">
 
-    <RelativeLayout
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:layout_marginLeft="25dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/monthSelectorText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="Select Month" />
-
-        <Spinner
-            android:id="@+id/incomeSpinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/monthSelectorText"
-            android:layout_marginLeft="30dp">
-        </Spinner>/>
-
-    </RelativeLayout>
-
-
+        android:text="Select Day"
+        android:onClick="selectDay"
+        android:layout_gravity="center_horizontal" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
