--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,13 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
+    <color name = "cyan">#00BCD4</color>
+    <color name = "amber">#FFC107</color>
+    <color name = "orange">#E64A19</color>
+    <color name ="indigo">#536DFE</color>
     <color name="colorAccent">#FF4081</color>
+    <color name = "grey">#616161</color>
+    <color name = "white">#FFFFFF</color>
+    <color name ="lime">#CDDC39</color>
+    <color name = "blueGrey">#455A64</color>
 </resources>
