--- a/app/src/main/res/layout/layout_blueprint_report.xml
+++ b/app/src/main/res/layout/layout_blueprint_report.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/green">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -12,6 +13,7 @@
             android:id="@+id/month"
             android:layout_marginTop="20dp"
             android:textSize="30sp"
+            android:textColor="@color/colorPrimaryDark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Month :"/>
@@ -21,6 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_marginLeft="20sp"
             android:text="month"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="30sp"
             android:layout_alignBaseline="@+id/month"
             android:layout_height="wrap_content"
@@ -35,6 +38,7 @@
             android:id="@+id/expenditure"
             android:layout_marginTop="20dp"
             android:textSize="30sp"
+            android:textColor="@color/colorPrimaryDark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Expenditure :"/>
@@ -45,6 +49,7 @@
             android:layout_marginLeft="20sp"
             android:text="month"
             android:textSize="30sp"
+            android:textColor="@color/colorPrimaryDark"
             android:layout_alignBaseline="@+id/expenditure"
             android:layout_height="wrap_content"
             android:layout_toEndOf="@+id/expenditure"/>
@@ -59,6 +64,7 @@
             android:id="@+id/income"
             android:layout_marginTop="20dp"
             android:textSize="30sp"
+            android:textColor="@color/colorPrimaryDark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Income :"/>
@@ -68,6 +74,7 @@
             android:layout_width="wrap_content"
             android:layout_marginLeft="20sp"
             android:text="month"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="30sp"
             android:layout_alignBaseline="@+id/income"
             android:layout_height="wrap_content"
