--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name = "grey">#616161</color>
     <color name = "white">#FFFFFF</color>
-    <color name ="lime">#CDDC39</color>
+    <color name = "lime">#CDDC39</color>
+    <color name = "green">#8BC34A</color>
     <color name = "blueGrey">#455A64</color>
 </resources>
