--- a/app/src/main/res/layout/layout_input_expenditure.xml
+++ b/app/src/main/res/layout/layout_input_expenditure.xml
@@ -3,13 +3,12 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/green">
+    android:background="@color/red">
 
     <CalendarView
         android:id="@+id/dateSelection"
         android:layout_width="match_parent"
-        android:layout_height="298dp"
-        android:selectedWeekBackgroundColor = "@color/amber">
+        android:layout_height="298dp">
     </CalendarView>
 
     <TextView
