--- a/app/src/main/res/drawable/incomebuttonshape.xml
+++ b/app/src/main/res/drawable/incomebuttonshape.xml
@@ -6,7 +6,7 @@
         <shape android:shape="oval">
             <corners
                 android:radius="3dp"/>?
-            <solid android:color="@color/amber"/>
+            <solid android:color="@color/blueGrey"/>
         </shape>
     </item>
 </ripple>
