--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="72dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="120dp"
         android:orientation="horizontal">
@@ -44,7 +44,21 @@
             android:background="@drawable/reportbuttonshape"
             android:onClick="openReport"
             android:text="Report" />
-
-
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
+
+        <Button
+            android:id="@+id/editBtn"
+            android:layout_width="62dp"
+            android:layout_height="62dp"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/editbuttonshape"
+            android:onClick="openEdit"
+            android:text="Edit" />
+        </LinearLayout>
+
 </LinearLayout>
